// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CoverDemo Cover change visible 1`] = `
<body>
  <div>
    <div
      class="edm-wingblank Cover edm-wingblank-m"
    >
      <h4>
        Cover
      </h4>
      <button
        class="edm-button edm-button-l edm-button-primary"
        role="button"
      >
        Cover
      </button>
      <div
        class="edm-Cover"
      />
      <div
        class="edm-whitespace edm-whitespace-m"
      />
      <button
        class="edm-button edm-button-l edm-button-primary"
        role="button"
      >
        Cover | transparent
      </button>
      <div
        class="edm-Cover edm-Cover-transparent"
      />
      <div
        class="edm-whitespace edm-whitespace-m"
      />
      <h4>
        Cover.Transition
      </h4>
      <button
        class="edm-button edm-button-l edm-button-primary"
        role="button"
      >
        Cover.Transition | Portal
      </button>
    </div>
  </div>
  <div
    class="edm-Cover edm-fade-entry-done edm-fade"
  />
</body>
`;

exports[`renders Cover correctly 1`] = `
<div>
  <div
    class="edm-wingblank Cover edm-wingblank-m"
  >
    <h4>
      Cover
    </h4>
    <button
      class="edm-button edm-button-l edm-button-primary"
      role="button"
    >
      Cover
    </button>
    <div
      class="edm-whitespace edm-whitespace-m"
    />
    <button
      class="edm-button edm-button-l edm-button-primary"
      role="button"
    >
      Cover | transparent
    </button>
    <div
      class="edm-whitespace edm-whitespace-m"
    />
    <h4>
      Cover.Transition
    </h4>
    <button
      class="edm-button edm-button-l edm-button-primary"
      role="button"
    >
      Cover.Transition | Portal
    </button>
  </div>
</div>
`;
